# traveaux-polytechnique

./: README.md
INF3610/: bsp_init.c  bsp_init.h  rapport.txt  routeur.c  routeur.h
INF8505/: README.md
INF8505/lib/: alu.n  control.n  custom_instructions.n  custom_instructions.p  div.n  flx.bcf  flx.h  flx.n  flx.p  flx.prx  flx_bitfield.h  flx_chess.h  flx_ci.h  flx_const.h  (+23 more)
INF8775/tp2/: CMakeLists.txt  rapport.ipynb  results.csv  run_all.sh  tp.sh
INF8775/tp2/src/: glouton.cpp  glouton.h  local.cpp  local.h  main_glouton.cpp  progdyn.cpp  progdyn.h  shared.cpp  shared.h
inf1010/TP3/: Abonne.cpp  Abonne.h  Bibliotheque.cpp  Bibliotheque.h  CMakeLists.txt  DVD.cpp  DVD.h  Emprunt.cpp  Emprunt.h  Etudiant.cpp  Etudiant.h  EtudiantBaccalaureat.cpp  EtudiantBaccalaureat.h  Livre.cpp  Livre.h  ObjetEmpruntable.cpp  ObjetEmpruntable.h  Professeur.cpp  Professeur.h  main.cpp  reponses_questions.txt
inf1010/TP4/: Abonne.cpp  Abonne.cpp~RF434676af.TMP  Abonne.h  Bibliotheque.cpp  Bibliotheque.h  CMakeLists.txt  Dvd.cpp  Dvd.cpp~RF43476787.TMP  Dvd.h  Emprunt.cpp  Emprunt.h  Etudiant.cpp  Etudiant.h  EtudiantBaccalaureat.cpp  EtudiantBaccalaureat.h  Livre.cpp  Livre.h  LivreNumerique.cpp  LivreNumerique.h  ObjetEmpruntable.cpp  ObjetEmpruntable.h  ObjetNumerique.cpp  ObjetNumerique.h  Professeur.cpp  Professeur.cpp~RF434acc9b.TMP  Professeur.h  README.md  main.cpp  reponses_questions.txt
inf1010/TP5/: Abonne.cpp  Abonne.h  Bibliotheque.cpp  Bibliotheque.h  CMakeLists.txt  DetruireEmprunt.h  Dvd.cpp  Dvd.h  Emprunt.cpp  Emprunt.h  Empruntable.h  Etudiant.cpp  Etudiant.h  EtudiantBaccalaureat.cpp  EtudiantBaccalaureat.h  Gestionnaire.h  Livre.cpp  Livre.h  LivreNumerique.cpp  LivreNumerique.h  MemeObjet.h  ObjetEmpruntable.cpp  ObjetEmpruntable.h  ObjetNumerique.h  Professeur.cpp  Professeur.h  RechercheObjetEmpruntable.h  TrieParTitre.h  main.cpp  readme.txt
inf1010/TP5/Gestionnaire/: CMakeLists.txt  Gestionnaire.h  main.cpp
inf4420a/: rapport4420_2.odt  table.sh
inf8440/: .gitignore  INF8480-25-projet-openrc.sh  README.md  cloud.key  pass
inf8480/: .gitignore  README.txt  build.xml  calculator  catalog  repartitor
inf8601/: .gitignore  README.md
inf8725/: .gitignore  README.md
(+118 files in other folders)
